# udens

./: README.md  setup.cfg
00-infrastructure/: README.md  __init__.py  bounds.py  classifier.py  inference.py  interpret.py  logging_utils_subN.py  utils.py
01-run/: SWYFT.py  interpreters.py  interpreters_uniform_norm.py
02-run/: 06-SWYFT_uniform.ipynb  06-SWYFT_uniform_4-4_old_stuff.ipynb  06-SWYFT_uniform_try_nosum.ipynb  Untitled.ipynb  config.yaml  config_uniform.yaml  config_uniform_norm.yaml  config_uniform_norm_blobs.yaml  interpreters_uniform.py
run/: 06-SWYFT_uniform_norm.ipynb  SWYFT.py  Untitled.ipynb  config_uniform_norm_blobs.yaml  job.sh
run_blobs/: README.md  SWYFT.ipynb  SWYFT.py  config_blobs.yaml  config_fermi.yaml  interpreter.py  job.sh  test.py
run_blobs/.hydra/: config.yaml  hydra.yaml
run_blobs/.ipynb_checkpoints/: SWYFT-checkpoint.ipynb
src/udens/: README.md  __init__.py  classifier.py  inference.py  interpret.py  lavalamp.py  log.py  plot.py  unet.py
src/udens.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/udens/models/: model.py  model_fermi.py  utils.py
udens.egg-info/: PKG-INFO  SOURCES.txt
