[metadata]
name = udens
version = 0.0.1
description = my_description
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/elidub/udens.git
project_urls =
    Bug Tracker = https://github.com/elidub/udens.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    jupyter
    matplotlib
    numpy
    tqdm
    torch
    plotly
#     torchinterp1d

[options.packages.find]
where = src
