[metadata]
name = udens
version = 0.0.1
description = my_description
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/elidub/udens.git
project_urls =
    Bug Tracker = https://github.com/elidub/udens.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    jupyter
    matplotlib
    numpy
    tqdm
#    torch
    plotly
    torch==1.7.1+cu101 
    torchvision==0.8.2+cu101 
    torchaudio==0.7.2
#     torchinterp1d

[options.packages.find]
where = src
